# isearch

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
scripts/: compare_rg.sh  coverage.sh  ensure_containerd.sh  search_candidates.txt
src/: live.rs  main.rs  ngram.rs  regex_plan.rs  verify.rs
src/index/: builder.rs  format.rs  mmap.rs  mod.rs  reader.rs  sharded.rs  sharded_build.rs  spill.rs  types.rs
src/watch/: apply.rs  compact.rs  delta.rs  events.rs  mod.rs  state.rs
tests/: cli_compare.rs  cli_system.rs  regex_query.rs  regex_search_end_to_end.rs
