[package]
name = "isearch"
version = "0.1.0"
edition = "2021"
description = "Ripgrep-compatible CLI scaffold with naive full-text search (index planned)"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crc32fast = "1.4"
dirs = "6.0.0"
ignore = "0.4"
memmap2 = "0.9"
memchr = "2.7"
rayon = "1.11.0"
regex = "1.12.3"
regex-syntax = "0.8.10"

[dev-dependencies]
assert_cmd = "2"
